infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logoca
  labels:
    app: logoca-logisticas
    env: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: logoca-staging
  labels:
    app: logoca-logisticas
    env: staging
