infra/kubernetes/angular-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-angular
  namespace: logoca
  labels:
    app: frontend-angular
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: frontend-angular
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-angular
  namespace: logoca
  labels:
    app: frontend-angular
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-angular
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend-angular
    spec:
      containers:
        - name: frontend-angular
          image: logoca/frontend-angular:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
